# mcp-browser_use-study

./: .gitignore  README.md  main.py  pyproject.toml
src/conf1/: conf1.py  conf1_instructions.html
src/uc1_local_hf/: run_ctransformers.py  run_hf.py  run_llama_cpp.py  uc1.py
src/uc2_gpt4all/: uc2.py
src/uc3_ollama/: uc3.py
src/uc4_google_login/: uc4.py
