[project]
name = "mcp-browser-use-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.1.46",
    "ctransformers",
    "gpt4all",
    "langchain",
    "langchain-community",
    "langchain-ollama",
    "llama-cpp-python",
    "torch",
    "transformers",
    "playwright",
]

[dependency-groups]
dev = [
    "langchain-cli>=0.0.36",
]
